--- a/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
+++ b/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
@@ -17,6 +17,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.15.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
