--- a/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
+++ b/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
@@ -28,7 +28,7 @@
 
 
   <ItemGroup>
-    <Folder Include="Posts\" />
+    <Content Include="Posts\*.md" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 
