build, favicon, caching

--- a/src/TerribleDev.Blog.Web/Dockerfile
+++ b/src/TerribleDev.Blog.Web/Dockerfile
@@ -5,8 +5,8 @@ EXPOSE 443
 
 FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /src
-COPY ["./TerribleDev.Blog.Web.csproj", "TerribleDev.Blog.Web/"]
-RUN dotnet restore "TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj"
+COPY ["./TerribleDev.Blog.Web.csproj", "."]
+RUN dotnet restore "TerribleDev.Blog.Web.csproj"
 COPY . .
 WORKDIR "/src"
 RUN dotnet build "TerribleDev.Blog.Web.csproj" -c Release -o /app
