--- a/src/TerribleDev.Blog.Web/bundleconfig.json
+++ b/src/TerribleDev.Blog.Web/bundleconfig.json
@@ -4,5 +4,17 @@
     "inputFiles": [
         "wwwroot/css/site.css"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/site.min.js",
+    "inputFiles": [
+      "wwwroot/js/swi.js"
+    ]
+  },
+  {
+    "outputFileName": "wwwroot/sw.min.js",
+    "inputFiles": [
+      "wwwroot/js/sw.js"
+    ]
   }
 ]
