--- a/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
+++ b/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
@@ -27,6 +27,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="YamlDotNet" Version="5.3.0" />
     <PackageReference Include="HardHat" Version="2.0.0" />
+    <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
+    <PackageReference Include="WebEssentials.AspNetCore.OutputCaching" Version="1.0.16" />
   </ItemGroup>
 
 
