--- a/src/TerribleDev.Blog.Web/wwwroot/manifest.json
+++ b/src/TerribleDev.Blog.Web/wwwroot/manifest.json
@@ -4,18 +4,18 @@
     "name": "The Ramblings of TerribleDev",
     "scope": "/",
     "display": "browser",
-    "start_url": "https://blog.terribledev.io/",
-    "short_name": "The Ramblings of a TerribleDev",
-    "theme_color": "transparent",
+    "start_url": "https://blog2.terribledev.io/",
+    "short_name": "TerribleDev's blog",
+    "theme_color": "#4A4A4A",
+    "background_color": "#FFF",
     "description": "My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space.",
     "orientation": "any",
-    "background_color": "transparent",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
-      {
-        "src": "/content/favicon.ico",
-        "sizes": "16x16"
-      }
+        {
+            "src": "/content/favicon.ico",
+            "sizes": "any"
+        }
     ]
-  }
+}
