--- a/src/TerribleDev.Blog.Web/wwwroot/manifest.json
+++ b/src/TerribleDev.Blog.Web/wwwroot/manifest.json
@@ -4,7 +4,7 @@
     "name": "The Ramblings of TerribleDev",
     "scope": "/",
     "display": "minimal-ui",
-    "start_url": "/",
+    "start_url": "/index.html",
     "short_name": "Terribl",
     "theme_color": "#4A4A4A",
     "background_color": "#FFF",
