--- a/src/TerribleDev.Blog.Core/TerribleDev.Blog.Core.fsproj
+++ b/src/TerribleDev.Blog.Core/TerribleDev.Blog.Core.fsproj
@@ -1,15 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Models/Post.fs" />
-    <Compile Include="Models/Util.fs" />
-    <Compile Include="MarkExtension/**/*.fs" />
+    <Compile Include="Util\Seq.fs" />
+    <Compile Include="Util\Async.fs" />
+    <Compile Include="Models\PostSettings.fs" />
+    <Compile Include="Models\Post.fs" />
+    <Compile Include="Models\Util.fs" />
+    <Compile Include="Factories\BlogFactory.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
     <PackageReference Include="Markdig" Version="0.15.7" />
+    <PackageReference Include="YamlDotNet" Version="5.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\TerribleDev.Blog.MarkdownPlugins\TerribleDev.Blog.MarkdownPlugins.csproj" />
   </ItemGroup>
 </Project>
