commit to fs in core only

--- a/src/TerribleDev.Blog.Core/TerribleDev.Blog.Core.fsproj
+++ b/src/TerribleDev.Blog.Core/TerribleDev.Blog.Core.fsproj
@@ -3,6 +3,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Util\fs.fs" />
+    <Compile Include="Util\Constants.fs" />
     <Compile Include="Util\Async.fs" />
     <Compile Include="Models\PostSettings.fs" />
     <Compile Include="Models\Post.fs" />
