start to move things to config

--- a/src/TerribleDev.Blog.Web/appsettings.json
+++ b/src/TerribleDev.Blog.Web/appsettings.json
@@ -9,5 +9,9 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Blog": {
+    "title": "The Ramblings of TerribleDev",
+    "link": "https://blog.terribledev.io"
+  }
 }
