--- a/src/TerribleDev.Blog.Web/appsettings.json
+++ b/src/TerribleDev.Blog.Web/appsettings.json
@@ -12,6 +12,6 @@
   "AllowedHosts": "*",
   "Blog": {
     "title": "The Ramblings of TerribleDev",
-    "link": "https://blog.terribledev.io"
+    "link": "https://blog.terrible.dev"
   }
 }
