--- a/.github/workflows/buildContainer.yml
+++ b/.github/workflows/buildContainer.yml
@@ -4,7 +4,7 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: 'Checkout Github Action' 
