--- a/src/TerribleDev.Blog.Web/Dockerfile
+++ b/src/TerribleDev.Blog.Web/Dockerfile
@@ -1,20 +1,26 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+# https://hub.docker.com/_/microsoft-dotnet
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
+WORKDIR /source
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["./TerribleDev.Blog.Web.csproj", "."]
-RUN dotnet restore "TerribleDev.Blog.Web.csproj"
+# copy csproj and restore as distinct layers
+COPY *.csproj .
+RUN dotnet restore -r linux-musl-x64 /p:PublishReadyToRunComposite=true
+
+# copy everything else and build app
 COPY . .
-WORKDIR "/src"
-RUN dotnet build "TerribleDev.Blog.Web.csproj" -c Release -o /app
+RUN dotnet publish -c release -o /app -r linux-musl-x64 --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRunComposite=true /p:PublishSingleFile=true
 
-FROM build AS publish
-RUN dotnet publish "TerribleDev.Blog.Web.csproj" -c Release -o /app
-
-FROM base AS final
+# final stage/image
+FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-alpine-amd64
 WORKDIR /app
-COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "TerribleDev.Blog.Web.dll"]
+COPY --from=build /app ./
+
+# See: https://github.com/dotnet/announcements/issues/20
+# Uncomment to enable globalization APIs (or delete)
+# ENV \
+#     DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false \
+#     LC_ALL=en_US.UTF-8 \
+#     LANG=en_US.UTF-8
+# RUN apk add --no-cache icu-libs
+
+ENTRYPOINT ["./TerribleDev.Blog.Web"]
