--- a/.github/workflows/capDeploy.yml
+++ b/.github/workflows/capDeploy.yml
@@ -7,7 +7,12 @@ jobs:
   CapDeploy:
     runs-on: ubuntu-latest
     steps:
-    - name: 'Checkout Github Action' 
-      uses: actions/checkout@master
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+    - name: 'Install Caprover'
+      run: |
+        npm install -g caprover
     - name: 'Deploy'
       run: caprover deploy -h '${{ secrets.CAPROVER_SERVER}}' -p '${{ secrets.CAPROVER_PASSWORD }}' -b branchName -a blog
