--- a/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
+++ b/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Markdig" Version="0.15.7" />
     <PackageReference Include="Schema.NET" Version="11.0.1" />
     <PackageReference Include="UriBuilder.Fluent" Version="1.5.2" />
+    <PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.11.0" />
     <PackageReference Include="YamlDotNet" Version="5.3.0" />
     <PackageReference Include="HardHat" Version="2.1.1" />
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
