--- a/src/TerribleDev.Blog.Web/Dockerfile
+++ b/src/TerribleDev.Blog.Web/Dockerfile
@@ -9,7 +9,7 @@ RUN dotnet restore -r linux-musl-x64 /p:PublishReadyToRunComposite=true
 # copy everything else and build app
 COPY . .
 RUN dotnet publish -c release -o /app -r linux-musl-x64 --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRunComposite=true /p:PublishSingleFile=true
-
+RUN date +%s > /app/buildtime.txt
 # final stage/image
 FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-alpine-amd64
 WORKDIR /app
