--- a/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
+++ b/src/TerribleDev.Blog.Web/TerribleDev.Blog.Web.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <RuntimeIdentifiers>linux-musl-x64</RuntimeIdentifiers>
+    <!-- <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <RuntimeIdentifiers>linux-musl-x64</RuntimeIdentifiers> -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,12 +23,11 @@
     <PackageReference Include="Markdig" Version="0.15.7" />
     <PackageReference Include="Schema.NET" Version="11.0.1" />
     <PackageReference Include="UriBuilder.Fluent" Version="1.5.2" />
-    <PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.11.0" />
+    <PackageReference Include="WebMarkupMin.AspNetCore7" Version="2.13.0-rc1" />
     <PackageReference Include="YamlDotNet" Version="5.3.0" />
     <PackageReference Include="HardHat" Version="2.1.1" />
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
-    <PackageReference Include="WebEssentials.AspNetCore.OutputCaching" Version="1.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.1" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
 
 
