--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
-# fly.toml file generated for tp-blog-2 on 2022-08-26T12:21:08-04:00
+# fly.toml file generated for dry-meadow-9911 on 2022-11-09T12:09:05-05:00
 
-app = "tp-blog-2"
+app = "dry-meadow-9911"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
@@ -27,12 +27,12 @@ processes = []
     handlers = ["http"]
     port = 80
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
+  # [[services.ports]]
+  #   handlers = ["tls", "http"]
+  #   port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
+    grace_period = "2s"
+    interval = "3s"
     restart_limit = 0
     timeout = "2s"
